objects/L2I_P_L_Approval__c.object
<CustomObject>
    <fields>
        <fullName>PL_IFC_CM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Contribution Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFC_CM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Contribution Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFC_Cost__c</fullName>
        <label>PL IFC Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFC_GM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFC_GM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFC_GR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFC_MP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Marginal Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFC_MP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Marginal Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFC_NR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFC_PTP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Pre-Tax Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFC_PTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFC Pre-Tax Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_CD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Credits &amp; Discounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_CM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Contribution Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFE_CM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Contribution Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_Cost__c</fullName>
        <label>PL IFE Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_GM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFE_GM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_GR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_MP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Marginal Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFE_MP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Marginal Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_NR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_IFE_PTP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Pre-Tax Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_IFE_PTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL IFE Pre-Tax Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_CD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Credits &amp; Discounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_CM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Contribution Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_PTS_CM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Contribution Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_Cost__c</fullName>
        <label>PL PTS COGS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_Fixed_Cost__c</fullName>
        <label>PL PTS Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_GM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_PTS_GM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_GR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_MP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Marginal Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_PTS_MP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Marginal Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_NR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_PTP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Pre-Tax Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_PTS_PTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL PTS Pre-Tax Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_PTS_Station__c</fullName>
        <label>PTS Station</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PL_Sales_Opportunity_Related_List__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/L2I_P_L_Approval__c/&quot; +Id+ &quot;/related/Opportunities_Related_To_P_L__r/view&quot;, &quot;Go to Opportunities&quot;)</formula>
        <label>P&amp;L Sales Opportunity Related List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_T_CD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Credits &amp; Discounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_T_CM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Contribution Margin (%)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_T_CM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Contribution Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_T_GM_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_T_GM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_T_GR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_T_MP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Marginal Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_T_MP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Marginal Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_T_NR_PTP_P__c</fullName>
        <description>Concatenated PL Total Net Revenue and PL Total Pre-Tax Profit (%)</description>
        <formula>&#39;USD &#39; &amp; TEXT( ROUND(PL_T_NR__c,2) ) &amp; &#39; : &#39; &amp;  TEXT( ROUND(PL_T_PTP_P__c * 100,2) ) &amp; &#39; %&#39;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PL Total Net Revenue : Pre-Tax Profit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_T_NR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_T_PTP_P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Pre-Tax Profit (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PL_T_PTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PL Total Pre-Tax Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_Total_Cost__c</fullName>
        <label>PL Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTS_Contribution_MarginPerc__c</fullName>
        <formula>L2I_PTS_Contribution_Margin__c /  L2I_PTS_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTS Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTS_Executive_Approval_Required__c</fullName>
        <formula>IF(AND((PL_PTS_PTP_P__c &lt; 0),(PL_PTS_NR__c &gt; 50000000)), &quot;TRUE&quot; 
,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTS Executive Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTS_Gross_MarginPerc__c</fullName>
        <formula>L2I_PTS_Gross_Margin__c / L2I_PTS_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTS Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTS_Pre_Tax_ProfitPerc__c</fullName>
        <formula>L2I_PTS_Pre_Tax_Profit__c /  L2I_PTS_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTS Pre-Tax Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P_L_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>P&amp;L Approvals (Parent P&amp;L Approval)</relationshipLabel>
        <relationshipName>P_L_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P_L_VarianceRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variance Record</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>P&amp;L Approvals (Variance Record)</relationshipLabel>
        <relationshipName>P_L_Approvals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P_L_Variance__c</fullName>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P_L_Version_L2I_Revision_Status__c</fullName>
        <description>Aggregate Field for P&amp;L Version and Revision Status</description>
        <formula>P_L_Version__c &amp; &quot; : &quot; &amp; TEXT(L2I_Revision_Status__c)</formula>
        <inlineHelpText>Aggregate Field for P&amp;L Version and Revision Status</inlineHelpText>
        <label>Version : Revision Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_L_Version__c</fullName>
        <formula>&quot;PandL-&quot; &amp;  IF( ISBLANK(Snapshot_Text_Version__c ) ,  TEXT(Snapshot_Version__c) , Snapshot_Text_Version__c)</formula>
        <label>P&amp;L Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Deal_Summary_ID__c</fullName>
        <label>Primary Deal Summary ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Deal_Summary__c</fullName>
        <formula>IF(ISBLANK(Primary_Deal_Summary_ID__c),&quot;&quot;,HYPERLINK(&quot;/&quot; &amp; Primary_Deal_Summary_ID__c, &quot;Primary Deal Summary&quot;))</formula>
        <label>Primary Deal Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To_Oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To Oracle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Text_Version__c</fullName>
        <description>This field will be used to as holder of converted &quot;Snapshot Version&quot; from numeric value to alphabet.</description>
        <label>Snapshot Text Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Snapshot Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P_L_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_NR_PTP__c</fullName>
        <formula>IF
(RecordType.DeveloperName == &#39;Prior_to_R5&#39;, 
&#39;USD &#39; &amp; TEXT( ROUND(L2I_Total_Net_Revenue__c,2) ) &amp; &#39; : &#39; &amp; TEXT( ROUND(Total_Pre_Tax_ProfitPerc__c * 100,2) ) &amp; &#39; %&#39;,
PL_T_NR_PTP_P__c)</formula>
        <label>Total Net Revenue : Pre-Tax Profit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contribution_MarginPerc__c</fullName>
        <formula>L2I_Total_Contribution_Margin__c /  L2I_Total_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Gross_MarginPerc__c</fullName>
        <formula>L2I_Total_Gross_Margin__c  /  L2I_Total_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Tax_ProfitPerc__c</fullName>
        <formula>L2I_Total_Pre_Tax_Profit__c /  L2I_Total_Net_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pre-Tax Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>P&amp;L Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubmittedDate__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>L2I_Revision_Status__c</columns>
        <columns>P_L_Version__c</columns>
        <columns>Primary_Deal_Summary_ID__c</columns>
        <columns>Primary_Deal_Summary__c</columns>
        <columns>Account_Name__c</columns>
        <columns>L2I_Approval_Deal_Opportunity__c</columns>
        <columns>L2I_Sales_Opportunity_Description__c</columns>
        <columns>PL_T_NR__c</columns>
        <columns>PL_T_PTP__c</columns>
        <columns>PL_T_PTP_P__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Gross_Fields_have_Values</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>SubmittedDate__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>L2I_Revision_Status__c</columns>
        <columns>P_L_Version__c</columns>
        <columns>L2I_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>L2I_Approval_Deal_Opportunity__c</columns>
        <columns>L2I_Sales_Opportunity_Description__c</columns>
        <columns>PL_T_NR__c</columns>
        <columns>PL_T_PTP__c</columns>
        <columns>PL_T_PTP_P__c</columns>
        <columns>L2I_Approval_Deal_Opportunity_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L2I_IFEC_Gross_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <filters>
            <field>L2I_DSS_Gross_Margin__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>All Gross Fields have Values</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>SubmittedDate__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>L2I_Revision_Status__c</columns>
        <columns>P_L_Version__c</columns>
        <columns>L2I_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>L2I_Approval_Deal_Opportunity__c</columns>
        <columns>L2I_Sales_Opportunity_Description__c</columns>
        <columns>PL_T_NR__c</columns>
        <columns>PL_T_PTP__c</columns>
        <columns>PL_T_PTP_P__c</columns>
        <columns>L2I_Approval_Deal_Opportunity_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Pending,Approved</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>Approved_P_Ls</fullName>
        <columns>NAME</columns>
        <columns>SubmittedDate__c</columns>
        <columns>L2I_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>L2I_Approval_Deal_Opportunity__c</columns>
        <columns>L2I_Total_Net_Revenue__c</columns>
        <columns>L2I_Total_Pre_Tax_Profit__c</columns>
        <columns>Total_Pre_Tax_ProfitPerc__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Holly</value>
        </filters>
        <label>Approved P&amp;Ls</label>
    </listViews>
    <listViews>
        <fullName>P_L_s_Submitted_pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>SubmittedDate__c</columns>
        <columns>L2I_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>L2I_Approval_Deal_Opportunity__c</columns>
        <columns>L2I_Total_Net_Revenue__c</columns>
        <columns>L2I_Total_Pre_Tax_Profit__c</columns>
        <columns>Total_Pre_Tax_ProfitPerc__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>P&amp;L&#39;s Submitted pending Approval</label>
    </listViews>
    <listViews>
        <fullName>Rejected_P_Ls</fullName>
        <columns>NAME</columns>
        <columns>SubmittedDate__c</columns>
        <columns>L2I_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>L2I_Approval_Deal_Opportunity__c</columns>
        <columns>L2I_Total_Net_Revenue__c</columns>
        <columns>L2I_Total_Pre_Tax_Profit__c</columns>
        <columns>Total_Pre_Tax_ProfitPerc__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected P&amp;Ls</label>
    </listViews>
    <nameField>
        <displayFormat>PandL-{00000}</displayFormat>
        <label>P&amp;L Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;L Approvals</pluralLabel>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <description>New Record Type to accomodate IFC section</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prior_to_R5</fullName>
        <active>true</active>
        <description>Approved records prior to R5</description>
        <label>Prior to R5</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>